# sdl-android-builder

./: .gitignore  .gitmodules  README.md  local.properties
.github/workflows/: build.yml  update-sample  update-sample.yml  update.yml
android-project/app/: build.gradle
app/: build.gradle
to-build/: CMakeLists.txt
